[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/dice/diceRed2.png" type="Texture" id=1]
[ext_resource path="res://assets/dice/diceRed6.png" type="Texture" id=2]
[ext_resource path="res://assets/dice/diceRed1.png" type="Texture" id=3]
[ext_resource path="res://assets/dice/diceRed5.png" type="Texture" id=4]
[ext_resource path="res://assets/dice/diceRed4.png" type="Texture" id=5]
[ext_resource path="res://assets/dice/diceRed3.png" type="Texture" id=6]
[ext_resource path="res://dice.gd" type="Script" id=7]

[node name="dice" type="Node2D"]
script = ExtResource( 7 )

[node name="1" type="TextureButton" parent="."]
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="TextureButton" parent="."]
visible = false
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="TextureButton" parent="."]
visible = false
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="TextureButton" parent="."]
visible = false
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="TextureButton" parent="."]
visible = false
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="TextureButton" parent="."]
visible = false
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="6" to="." method="_on_6_pressed"]
